--- a/client/src/components/AddCard.css
+++ b/client/src/components/AddCard.css
@@ -6,6 +6,12 @@
     border-style: solid;
     border-radius: 20px;
     width: 99%;
+
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 1);
 }
 
 .quantity-margin {
