--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -25,7 +25,8 @@ p {
 .left > table > tbody > tr:hover {background-color: grey;}
 
 .left > table > thead > tr > th {
-    background-color: #00452c;
+    /* background-color: #00452c; */
+    background-color: rgba(194,159,55,1);
     color: white;
     /* width: 5vw; */
     width: 100vw;
@@ -62,9 +63,17 @@ p {
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
-    border: #00452c;
+    /* border: #00452c; */
+    border: rgba(194,159,55,1);
     border-style: solid;
     border-radius: 20px;
+
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 1);
 }
 
 .left-contain {
@@ -76,19 +85,28 @@ p {
 .right {
     /* float: right; */
     /* flex-grow: 1; */
-    border: #00452c;
+    /* border: #00452c; */
+    border: rgba(194,159,55,1);
     border-style: solid;
     border-radius: 20px;
     width: 39%;
     margin-left: auto;
     margin-right: auto;
+
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 1);
 }
 
-img {
+.right-img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     /* width: 50%; */
+    /* height: 90vh; */
+    width: 37vh;
 }
 
 @media (max-width: 800px) {
