--- a/client/src/components/CreateList.css
+++ b/client/src/components/CreateList.css
@@ -6,6 +6,12 @@
     width: 99%;
     margin-left: auto;
     margin-right: auto;
+    
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 1);
 }
 
 .create-input-des {
