--- a/client/src/components/SearchResults.css
+++ b/client/src/components/SearchResults.css
@@ -1,3 +1,19 @@
+.contain-res {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    border: #00452c;
+    border-style: solid;
+    border-radius: 20px;
+    width: 95%;
+
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 1);
+}
+
 .full-results {
     display: inline-flex;
     /* position: relative; */
@@ -15,6 +31,22 @@
     /* margin-top: 1vh; */
     /* margin-bottom: 1vh; */
 
+}
+
+.cen-search {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    border: #00452c;
+    border-style: solid;
+    border-radius: 20px;
+    width: 99%;
+
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 1);
 }
 
 @media (max-width: 800px) {
