cleaned up and fixed up code

--- a/client/src/components/layout/Header.css
+++ b/client/src/components/layout/Header.css
@@ -5,6 +5,8 @@
 .nav-link-color {
     text-decoration: none;
     color: white;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .nav-link-color:hover {
