--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -92,6 +92,6 @@ border: 1px solid rgba(255, 255, 255, 1);
     text-align: left;
 }
 
-.align-update-delete > table > tr > td {
+.align-update-delete > table > tbody > tr > td {
     padding: 10px;
 }
