--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -27,6 +27,8 @@ p {
 .left > table > thead > tr > th {
     /* background-color: #00452c; */
     background-color: rgba(194,159,55,1);
+    /* border:white; */
+    /* border-style: solid; */
     color: white;
     /* width: 5vw; */
     width: 100vw;
@@ -37,6 +39,12 @@ p {
     width: 95%;
     margin-left: auto;
     margin-right: auto;
+
+    background: rgba(195, 185, 95, 1);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 1);
 }
 
 .left > table > tbody > tr {
@@ -69,7 +77,7 @@ p {
     border-radius: 20px;
 
     /* From https://css.glass */
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(195, 185, 95, 1);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
@@ -93,7 +101,7 @@ p {
     margin-left: auto;
     margin-right: auto;
 
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(195, 185, 95, 1);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
