--- a/client/src/components/CreateList.css
+++ b/client/src/components/CreateList.css
@@ -1,13 +1,13 @@
 .create-input {
     text-align: center;
-    border: #00452c;
+    /* border: #00452c; */
     border-style: solid;
     border-radius: 20px;
     width: 99%;
     margin-left: auto;
     margin-right: auto;
     
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(195, 185, 95, 1);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
