--- a/client/src/components/SearchResults.css
+++ b/client/src/components/SearchResults.css
@@ -2,12 +2,12 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    border: #00452c;
+    /* border: #00452c; */
     border-style: solid;
     border-radius: 20px;
     width: 95%;
 
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(195, 185, 95, 1);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
@@ -38,12 +38,12 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    border: #00452c;
+    /* border: #00452c; */
     border-style: solid;
     border-radius: 20px;
     width: 99%;
 
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(195, 185, 95, 1);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
@@ -56,6 +56,3 @@
 
     }
   }
-
-/* <div style={{ display: 'flex', flexWrap : 'wrap', justifyContent : 'center' }}> */
-/* <Card style={{ width: '18rem', margin : '1vh'}} key={info.name}> */
